--- a/MeetingApp/Base.lproj/Main.storyboard
+++ b/MeetingApp/Base.lproj/Main.storyboard
@@ -169,14 +169,14 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="rhm-8l-29H" kind="relationship" relationship="rootViewController" id="5Lp-OC-Mq4"/>
+                        <segue destination="wHX-Ce-Slq" kind="relationship" relationship="rootViewController" id="5Lp-OC-Mq4"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9oK-UC-Odh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-881" y="566"/>
         </scene>
-        <!--Meeting Table View Controller-->
+        <!--Meetings-->
         <scene sceneID="gja-4r-W3C">
             <objects>
                 <tableViewController id="rhm-8l-29H" customClass="MeetingTableViewController" sceneMemberID="viewController">
@@ -199,15 +199,9 @@
                             <outlet property="delegate" destination="rhm-8l-29H" id="rln-bg-q4O"/>
                         </connections>
                     </tableView>
+                    <tabBarItem key="tabBarItem" title="Meetings" image="meetingTabBar" selectedImage="meetingTabBar" id="qbp-gA-pYW"/>
                     <navigationItem key="navigationItem" id="x2G-hv-kw0">
-                        <barButtonItem key="leftBarButtonItem" title="menuApp" style="plain" id="YTL-K5-T1d">
-                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="gww-Hg-4hD">
-                                <rect key="frame" x="16" y="11" width="22" height="22"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" image="menu"/>
-                            </button>
-                        </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="compose" id="Usq-Tu-G92">
+                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="add" id="Usq-Tu-G92">
                             <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
                                 <segue destination="3ui-UR-gmk" kind="modal" identifier="newMeeting" id="Q6e-Yl-ysx"/>
@@ -221,7 +215,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Et8-Mc-bnM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-137" y="566"/>
+            <point key="canvasLocation" x="674.5" y="565.5"/>
         </scene>
         <!--Meeting Detail View Controller-->
         <scene sceneID="63m-oX-BFG">
@@ -247,12 +241,6 @@
                                 <color key="textColor" red="0.2901960784" green="0.56470588239999997" blue="0.8862745098" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Notifications:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h9b-Px-ScR">
-                                <rect key="frame" x="20" y="588" width="101" height="21"/>
-                                <fontDescription key="fontDescription" name="BodoniSvtyTwoITCTT-Bold" family="Bodoni 72" pointSize="17"/>
-                                <color key="textColor" red="0.2901960784" green="0.56470588239999997" blue="0.8862745098" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Coh-EO-t8u">
                                 <rect key="frame" x="20" y="107" width="335" height="21"/>
                                 <fontDescription key="fontDescription" name="BodoniSvtyTwoITCTT-Book" family="Bodoni 72" pointSize="17"/>
@@ -266,15 +254,21 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Vm2-MH-6dN">
-                                <rect key="frame" x="0.0" y="212" width="375" height="321"/>
+                                <rect key="frame" x="0.0" y="212" width="375" height="288"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <outlet property="dataSource" destination="xny-kL-2zx" id="7XK-3u-0zz"/>
                                     <outlet property="delegate" destination="xny-kL-2zx" id="BHh-2u-IIU"/>
                                 </connections>
                             </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Notifications:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h9b-Px-ScR">
+                                <rect key="frame" x="20" y="514" width="101" height="21"/>
+                                <fontDescription key="fontDescription" name="BodoniSvtyTwoITCTT-Bold" family="Bodoni 72" pointSize="17"/>
+                                <color key="textColor" red="0.2901960784" green="0.56470588239999997" blue="0.8862745098" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sNw-V2-K7D">
-                                <rect key="frame" x="305" y="582" width="50" height="31"/>
+                                <rect key="frame" x="305" y="508" width="50" height="31"/>
                                 <color key="backgroundColor" red="1" green="0.41176470588235292" blue="0.41176470588235292" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" image="calendar"/>
                                 <userDefinedRuntimeAttributes>
@@ -288,7 +282,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H6J-z7-O2m">
-                                <rect key="frame" x="247" y="582" width="50" height="31"/>
+                                <rect key="frame" x="247" y="508" width="50" height="31"/>
                                 <color key="backgroundColor" red="1" green="0.41176470588235292" blue="0.41176470588235292" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" image="email"/>
                                 <userDefinedRuntimeAttributes>
@@ -302,7 +296,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="idz-WT-Tkb">
-                                <rect key="frame" x="131" y="582" width="50" height="33"/>
+                                <rect key="frame" x="131" y="508" width="50" height="33"/>
                                 <color key="backgroundColor" red="1" green="0.41176470590000003" blue="0.41176470590000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" image="push"/>
                                 <userDefinedRuntimeAttributes>
@@ -316,7 +310,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gsg-ih-2qd">
-                                <rect key="frame" x="0.0" y="627" width="375" height="40"/>
+                                <rect key="frame" x="0.0" y="543" width="375" height="40"/>
                                 <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" name="BodoniSvtyTwoITCTT-Bold" family="Bodoni 72" pointSize="16"/>
                                 <state key="normal" title="Delete Meeting">
@@ -324,7 +318,7 @@
                                 </state>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sJS-ZC-AEr">
-                                <rect key="frame" x="189" y="582" width="50" height="32"/>
+                                <rect key="frame" x="189" y="508" width="50" height="32"/>
                                 <color key="backgroundColor" red="1" green="0.41176470590000003" blue="0.41176470590000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" image="reminder"/>
                                 <userDefinedRuntimeAttributes>
@@ -354,7 +348,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Nsk-Ur-yxA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="389.5" y="565.5"/>
+            <point key="canvasLocation" x="1201.5" y="565.5"/>
         </scene>
         <!--Guest Detail View Controller-->
         <scene sceneID="gQG-xo-cFF">
@@ -411,7 +405,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FWG-EG-yZO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="911.5" y="565.5"/>
+            <point key="canvasLocation" x="1723.5" y="565.5"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="U1c-qm-2em">
@@ -540,11 +534,29 @@
             </objects>
             <point key="canvasLocation" x="1044" y="1560"/>
         </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="gl9-QC-Vww">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="wHX-Ce-Slq" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="ejz-vK-5Ks"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="n3K-Js-lW7">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="rhm-8l-29H" kind="relationship" relationship="viewControllers" id="Lk7-11-Uha"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0w0-FO-L8x" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-25" y="565"/>
+        </scene>
     </scenes>
     <resources>
         <image name="calendar" width="22" height="22"/>
         <image name="email" width="22" height="22"/>
-        <image name="menu" width="22" height="22"/>
+        <image name="meetingTabBar" width="35" height="29"/>
         <image name="push" width="22" height="22"/>
         <image name="reminder" width="22" height="22"/>
     </resources>
