--- a/MeetingApp/Base.lproj/Main.storyboard
+++ b/MeetingApp/Base.lproj/Main.storyboard
@@ -358,11 +358,11 @@
                     <navigationItem key="navigationItem" id="Tk7-L9-WC7"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
-                        <outlet property="calendarNotification" destination="T8F-yz-yxc" id="IhV-JI-2uK"/>
+                        <outlet property="calendarNotification" destination="sNw-V2-K7D" id="pkl-oS-Xdj"/>
                         <outlet property="dateOfMeeting" destination="Coh-EO-t8u" id="OTf-Zf-5z9"/>
-                        <outlet property="emailNotification" destination="T8F-yz-yxc" id="og2-Oq-O86"/>
+                        <outlet property="emailNotification" destination="H6J-z7-O2m" id="5k1-fE-IjM"/>
                         <outlet property="pushNotification" destination="idz-WT-Tkb" id="T9K-NQ-OQf"/>
-                        <outlet property="reminderNotification" destination="T8F-yz-yxc" id="pJN-2h-oD2"/>
+                        <outlet property="reminderNotification" destination="sJS-ZC-AEr" id="kFV-Nl-zMe"/>
                         <outlet property="timeOfMeeting" destination="a0F-DZ-xP4" id="nRt-7E-weL"/>
                         <segue destination="vsP-VU-T7a" kind="push" identifier="guestDetail" id="quK-4A-wsB"/>
                     </connections>
